# koffice-videoshape

./: CMakeLists.txt
videoshape/: CMakeLists.txt  FullScreenPlayer.cpp  Plugin.cpp  VideoCollection.cpp  VideoCollection.h  VideoData.cpp  VideoData.h  VideoEventAction.cpp  VideoEventAction.h  VideoShape.cpp  VideoShape.h  VideoShapeConfigWidget.cpp  VideoShapeConfigWidget.h  VideoShapeFactory.cpp  VideoShapeFactory.h  videoshape.desktop
